--- a/template/index.html
+++ b/template/index.html
@@ -11,35 +11,52 @@
 
 <body>
 
-</body>
-<div class="grid-container">
 
-    <header class="header">
-        <div class="brand">
-            <a href="index.html">amazona</a>
-        </div>
-        <div class="header-links">
-            <a href="cart.html">Cart</a>
-            <a href="signin">Sign In</a>
-        </div>
-    </header>
-    <!-- <aside>
-        Shopping Categories
-    </aside> -->
-    <main class="main">
-        <ul>
-            <li>Product 1</li>
-            <li>Product 2</li>
-            <li>Product 3</li>
-            <li>Product 4</li>
-            <li>Product 5</li>
-            <li>Product 6</li>
-            <li>Product 7</li>
-        </ul>
-    </main>
-    <footer class="footer">
-        All right reserved.
-    </footer>
-</div>
+    <div class="grid-container">
+
+        <header class="header">
+            <div class="brand">
+                <a href="index.html">amazona</a>
+            </div>
+            <div class="header-links">
+                <a href="cart.html">Cart</a>
+                <a href="signin.html">Sign In</a>
+            </div>
+        </header>
+
+        <main class="main">
+            <div class="content">
+                <ul class="products">
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="/images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">Rs 500</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="product">
+                            <img class="product-image" src="/images/d1.jpg" alt="product">
+                            <div class="product-name">
+                                <a href="product.html">Slim Shirt</a>
+                            </div>
+                            <div class="product-brand">Nike</div>
+                            <div class="product-price">Rs 500</div>
+                            <div class="product-rating">4.5 Stars (10 reviews)</div>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+        </main>
+        <footer class="footer">
+            All right reserved.
+        </footer>
+    </div>
+</body>
 
 </html>
