--- a/template/index.html
+++ b/template/index.html
@@ -16,6 +16,7 @@
 
         <header class="header">
             <div class="brand">
+                <button onclick="openMenu()">&#9776;</button>
                 <a href="index.html">amazona</a>
             </div>
             <div class="header-links">
@@ -23,6 +24,19 @@
                 <a href="signin.html">Sign In</a>
             </div>
         </header>
+        <aside class="sidebar">
+            <h3>Shopping Category</h3>
+            <button class="sidebar-close-button" onclick="closeMenu()">X</button>
+            <ul>
+                <li>
+                    <a href="index.html">Pants</a>
+                </li>
+                <li>
+                    <a href="index.html">Shirts</a>
+                </li>
+            </ul>
+
+        </aside>
 
         <main class="main">
             <div class="content">
@@ -57,6 +71,15 @@
             All right reserved.
         </footer>
     </div>
+    <script>
+        function openMenu() {
+            document.querySelector(".sidebar").classList.add("open")
+        }
+
+        function closeMenu() {
+            document.querySelector(".sidebar").classList.remove("open")
+        }
+    </script>
 </body>
 
 </html>
