added react application

--- a/template/index.html
+++ b/template/index.html
@@ -43,7 +43,7 @@
                 <ul class="products">
                     <li>
                         <div class="product">
-                            <img class="product-image" src="/images/d1.jpg" alt="product">
+                            <img class="product-image" src="/images/d1.jpg" alt="product" />
                             <div class="product-name">
                                 <a href="product.html">Slim Shirt</a>
                             </div>
