--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
         </header>
         <aside class="sidebar">
             <h3>Shopping Category</h3>
-            <button class="sidebar-close-button" onclick="closeMenu()">X</button>
+            <button class="sidebar-close-button" onclick="closeMenu()">x</button>
             <ul>
                 <li>
                     <a href="index.html">Pants</a>
