--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -195,10 +195,73 @@ a:hover {
   border: 0.1rem #808080 solid;
   border-radius: 0.5rem;
   cursor: pointer;
+  font-size: 1.6rem;
 }
+.full-width {
+  width: 100%;
+}
+
 .button:hover {
   border: 0.1rem #404040 solid;
 }
 .button.primary {
   background-color: #f0c040;
+}
+
+/* CART */
+.cart {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem;
+  align-items: flex-start;
+}
+
+.cart-list {
+  flex: 3 1 60rem;
+}
+
+.cart-action {
+  flex: 1 1 20rem;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.cart-list-container {
+  padding: 0;
+  list-style-type: none;
+  padding: 1rem;
+}
+
+.cart-list-container li {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 0.1rem #808080 solid;
+}
+
+.cart-list-container li img {
+  max-width: 10rem;
+  max-height: 10rem;
+  /* margin-bottom: 1rem;  */
+  /* border: 0.1rem #808080 solid; */
+}
+
+.cart-list-container li:first-child {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.cart-image {
+  flex: 1 1;
+}
+.cart-name {
+  flex: 8 1;
+}
+.cart-price {
+  flex: 1 1;
+  font-size: 2.5rem;
+  text-align: right;
 }
