Implemented Order Payment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -426,6 +426,10 @@ a:hover {
   color: #a02020;
   background-color: #ffe0e0;
 }
+.alert-success {
+  color: #20a020;
+  background-color: #eeffe0;
+}
 
 /* FORMS */
 .form {
